fix: slider gallery center alignment

--- a/src/sections/slider-gallery/styles.module.scss
+++ b/src/sections/slider-gallery/styles.module.scss
@@ -7,9 +7,7 @@
     32px 0px 32px 40px,
     40px 0px 40px 70px
   );
-}
 
-.container {
   * {
     align-items: center !important;
   }
